# Ship-Game

./: CMakeLists.txt  README.md
inc/: Event.h  Ship.h  fastShip.h  normalShip.h  strongShip.h
src/: Event.cpp  Ship.cpp  fastShip.cpp  main.cpp  normalShip.cpp  strongShip.cpp
